# twitchbot2

./: .gitignore  Cargo.toml  LICENSE.md  README.md  docker-compose.yml
entity/: Cargo.toml
entity/src/: banned_words.rs  channel_users.rs  channels.rs  mod.rs  prelude.rs  urls.rs  users.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_channels_table.rs  m20220101_000002_create_banned_words_table.rs  m20241110_180847_create_users_table.rs  m20241111_195113_create_channel_users_table.rs  m20241111_195118_create_urls_table.rs
src/: bot.rs  errors.rs  main.rs  opts.rs
