[package]
name = "twitchbot2"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" } # depends on your needs
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
rabbitmq-stream-client = "*"
reqwest = "0.12.9"
reqwest_old = { version = "0.11.27", package = "reqwest" }
twitch_api = { version = "0.7.0-rc.6", features = ["helix", "reqwest", "hmac", "eventsub"] }
color-eyre = "0.6.2"
bacon = "3.2.0"
clap = { version = "4.5.20", features = ["derive", "env"] }
async-trait = "0.1.83"
eyre = "0.6.8"
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
dotenvy = "0.15.7"
twitch-irc = { version = "5.0.0", features = ["with-serde", "reqwest"] }
aliri_braid = "0.4.0"
serde = { version = "1.0.214", features = ["derive"] }
chrono = { version = "0.4.31", features = ["serde"] }
serde_json = "1.0.132"
tokio-stream = "0.1.16"
sea-orm = { version = "1.1.1", features = ["sqlx-postgres", "runtime-tokio", "mock"] }
regex = "1.11.1"
